# RustHound

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  correlated_rules.toml  rules.toml  sample.json  sample_freq.json  setup.sh
.cursor/: AGENT_GIT.md
.cursor/skills/: README.md  SOURCES.md
.cursor/skills/debug-to-fix/: SKILL.md  UPSTREAM.md
.cursor/skills/incident-response/: UPSTREAM.md
.cursor/skills/loose-ends/: SKILL.md  UPSTREAM.md
.cursor/skills/monitoring-terminal-errors/: UPSTREAM.md
.cursor/skills/parallel-ci-triage/: UPSTREAM.md
.cursor/skills/prove-it/: SKILL.md  UPSTREAM.md
.cursor/skills/rust-domain-cli/: UPSTREAM.md
.cursor/skills/rust-m01-ownership/: UPSTREAM.md
.cursor/skills/rust-m06-error-handling/: UPSTREAM.md
.cursor/skills/rust-m07-concurrency/: UPSTREAM.md
.cursor/skills/rust-router/: UPSTREAM.md
.cursor/skills/rust-skills-leonardomso/: UPSTREAM.md
.cursor/skills/rusthound-architecture/: SKILL.md
.cursor/skills/rusthound-cargo-tail/: SKILL.md
.cursor/skills/rusthound-dev-workflow/: SKILL.md
.cursor/skills/rusthound-git-attribution/: SKILL.md
.cursor/skills/rusthound-rules-toml/: SKILL.md
.cursor/skills/safe-refactor/: SKILL.md  (+1 more)
logs/: .592b55a2bc0e4851197f001b17166da8e88d28fa-audit.json
scripts/: git-commit-as-owner.sh  install-cursor-skills.sh
src/: lib.rs  main.rs
src/analyzer/: correlation_engine.rs  frequency_tracker.rs  mod.rs  pattern_matcher.rs
src/config/: mod.rs  rules.rs
src/output/: console.rs  json_writer.rs  mod.rs
src/watcher/: file_watcher.rs  log_reader.rs  mod.rs
(+5 files in other folders)
